// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppInput > renders the an error message 1`] = `
<div
  data-v-app=""
>
  
  <input
    aria-describedby="my-input-hint"
    aria-invalid="true"
    aria-labelledby="my-input-label"
    class="elm-input"
    id="my-input"
    name="my-input"
    placeholder="please enter some text"
    type="text"
  />
  <label
    aria-hidden="true"
    class="elm-label"
    for="my-input"
    id="my-input-label"
  >
    My Input
  </label>
  <p
    class="description"
    id="my-input-hint"
  >
    
    My error message
    
  </p>
  
</div>
`;

exports[`AppInput > renders the input field 1`] = `
<div
  data-v-app=""
>
  
  <input
    aria-describedby="my-input-hint"
    aria-invalid="false"
    aria-labelledby="my-input-label"
    class="elm-input"
    id="my-input"
    name="my-input"
    placeholder="please enter some text"
    type="text"
  />
  <label
    aria-hidden="true"
    class="elm-label"
    for="my-input"
    id="my-input-label"
  >
    My Input
  </label>
  <!--v-if-->
  
</div>
`;
